# sovp-python

./: CHANGELOG-v02.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_payload.json
.github/workflows/: ci.yml
docs/: draft-v02-planned-changes.md
examples/: ard_trust_manifest.py  end_to_end.py
sovp/: __init__.py  cli.py  core.py  resolver.py
tests/: test_core.py  test_vectors.py
tests/examples/: test_payload.json
workers/sovp-identity/: README.md  index.mjs  wrangler.toml
