[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sovp"
version = "0.1.0-alpha"
description = "Sovereign Validation Protocol (SOVP) Core Engine"
authors = [{name = "Litzki Systems LLC"}]
license = {text = "Apache-2.0"}
dependencies = [
    "cryptography",
    "jcs",
]

[project.scripts]
sovp = "sovp.cli:main"
