[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sovp"
version = "1.0.3"
readme = "README.md"
description = "Sovereign Validation Protocol (SOVP) Core Engine"
authors = [{name = "Litzki Systems LLC"}]
license = "Apache-2.0"
dependencies = [
    "cryptography",
    "jcs",
    "dnspython",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
sovp = "sovp.cli:main"

[tool.setuptools.packages.find]
include = ["sovp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
